# maxxit-latest

./: .dockerignore  .env.example  .env.proof-worker.example  .env.twitter  .gitignore  Dockerfile  Dockerfile.proof-worker  LICENSE  README.md  SET_WEBHOOK_NOW.sh  hardhat.config.cjs  middleware.ts  next.config.mjs  ostium-pairs-20251208-130226.json  package-lock.json  package.json  prisma.ts  quick_check.ts  render.yaml  requirements.txt  test-encryption-end-to-end.js  test-encryption-full.js  test-encryption-match.js  test-ostium-open-position.sh  test_encryption_full.py  test_encryption_match.py  test_pipeline_flow.ts  tsconfig.base.json  tsconfig.json
0g-backend/: package-lock.json  package.json  tsconfig.json
client/: index.html
components/: AgentCard.tsx  AgentDrawer.tsx  AvantisConnect.tsx  AvantisDelegationModal.tsx  AvantisSetupButton.tsx  AvantisUsdcApprovalModal.tsx  CtAccountSelector.tsx  DeployWithPreferences.example.tsx  ExecutorAgreementModal.tsx  GMXSetupButton.tsx  Header.tsx  HyperliquidAgentApproval.tsx  HyperliquidAgentModal.tsx  HyperliquidConnect.old.tsx  HyperliquidConnect.tsx  HyperliquidDashboard.tsx  HyperliquidSetupButton.tsx  LoginBonusProvider.tsx  ModuleSecurityDisclosure.tsx  MultiVenueSelector.tsx  OstiumApproval.tsx  OstiumConnect.tsx  OstiumDelegationModal.tsx  OstiumSetupButton.tsx  OstiumUsdcApprovalModal.tsx  PaymentSelectorModal.tsx  ResearchInstituteSelector.tsx  SPOTSetupButton.tsx  SplitText.tsx  SupportAssistant.tsx  TelegramAlphaUserSelector.tsx  TelegramSourceManager.tsx  (+6 more)
sp1/script/: Cargo.toml
sp1/script/src/: main.rs
(+681 files in other folders)
