[package]
name = "ostium-trader-host"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { version = "4.1.2", features = ["native-gnark"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"

[build-dependencies]
sp1-build = "4.1.2"
